--- a/newindex.html
+++ b/newindex.html
@@ -95,6 +95,8 @@
   "has a favorite jacket",
   "let's don't and say we did",
   "can imagine quite a bit",
+		  "is off by one",
+		  "what could go wrong",
   "nice place you have here, mr. pike",
   "here comes your man",
   "has no problem with that",
