--- a/pics-ballona.html
+++ b/pics-ballona.html
@@ -99,73 +99,73 @@ img {vertical-align: middle;}
 
 <div class="slideshow-container">
 
-<div class="mySlides fade"> <div class="numbertext">1 / 67</div> <img src="pics-ballona-compressed"/01.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">2 / 67</div> <img src="pics-ballona-compressed"/02.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">3 / 67</div> <img src="pics-ballona-compressed"/03.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">4 / 67</div> <img src="pics-ballona-compressed"/04.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">5 / 67</div> <img src="pics-ballona-compressed"/05.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">6 / 67</div> <img src="pics-ballona-compressed"/06.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">7 / 67</div> <img src="pics-ballona-compressed"/07.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">8 / 67</div> <img src="pics-ballona-compressed"/08.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">9 / 67</div> <img src="pics-ballona-compressed"/09.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">10 / 67</div> <img src="pics-ballona-compressed"/10.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">11 / 67</div> <img src="pics-ballona-compressed"/11.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">12 / 67</div> <img src="pics-ballona-compressed"/12.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">13 / 67</div> <img src="pics-ballona-compressed"/13.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">14 / 67</div> <img src="pics-ballona-compressed"/14.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">15 / 67</div> <img src="pics-ballona-compressed"/15.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">16 / 67</div> <img src="pics-ballona-compressed"/16.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">17 / 67</div> <img src="pics-ballona-compressed"/17.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">18 / 67</div> <img src="pics-ballona-compressed"/18.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">19 / 67</div> <img src="pics-ballona-compressed"/19.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">20 / 67</div> <img src="pics-ballona-compressed"/20.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">21 / 67</div> <img src="pics-ballona-compressed"/21.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">22 / 67</div> <img src="pics-ballona-compressed"/22.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">23 / 67</div> <img src="pics-ballona-compressed"/23.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">24 / 67</div> <img src="pics-ballona-compressed"/24.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">25 / 67</div> <img src="pics-ballona-compressed"/25.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">26 / 67</div> <img src="pics-ballona-compressed"/26.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">27 / 67</div> <img src="pics-ballona-compressed"/27.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">28 / 67</div> <img src="pics-ballona-compressed"/28.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">29 / 67</div> <img src="pics-ballona-compressed"/29.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">30 / 67</div> <img src="pics-ballona-compressed"/30.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">31 / 67</div> <img src="pics-ballona-compressed"/31.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">32 / 67</div> <img src="pics-ballona-compressed"/32.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">33 / 67</div> <img src="pics-ballona-compressed"/33.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">34 / 67</div> <img src="pics-ballona-compressed"/34.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">35 / 67</div> <img src="pics-ballona-compressed"/35.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">36 / 67</div> <img src="pics-ballona-compressed"/36.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">37 / 67</div> <img src="pics-ballona-compressed"/37.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">38 / 67</div> <img src="pics-ballona-compressed"/38.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">39 / 67</div> <img src="pics-ballona-compressed"/39.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">40 / 67</div> <img src="pics-ballona-compressed"/40.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">41 / 67</div> <img src="pics-ballona-compressed"/41.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">42 / 67</div> <img src="pics-ballona-compressed"/42.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">43 / 67</div> <img src="pics-ballona-compressed"/43.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">44 / 67</div> <img src="pics-ballona-compressed"/44.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">45 / 67</div> <img src="pics-ballona-compressed"/45.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">46 / 67</div> <img src="pics-ballona-compressed"/46.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">47 / 67</div> <img src="pics-ballona-compressed"/47.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">48 / 67</div> <img src="pics-ballona-compressed"/48.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">49 / 67</div> <img src="pics-ballona-compressed"/49.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">50 / 67</div> <img src="pics-ballona-compressed"/50.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">51 / 67</div> <img src="pics-ballona-compressed"/51.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">52 / 67</div> <img src="pics-ballona-compressed"/52.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">53 / 67</div> <img src="pics-ballona-compressed"/53.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">54 / 67</div> <img src="pics-ballona-compressed"/54.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">55 / 67</div> <img src="pics-ballona-compressed"/55.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">56 / 67</div> <img src="pics-ballona-compressed"/56.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">57 / 67</div> <img src="pics-ballona-compressed"/57.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">58 / 67</div> <img src="pics-ballona-compressed"/58.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">59 / 67</div> <img src="pics-ballona-compressed"/59.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">60 / 67</div> <img src="pics-ballona-compressed"/60.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">61 / 67</div> <img src="pics-ballona-compressed"/61.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">62 / 67</div> <img src="pics-ballona-compressed"/62.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">63 / 67</div> <img src="pics-ballona-compressed"/63.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">64 / 67</div> <img src="pics-ballona-compressed"/64.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">65 / 67</div> <img src="pics-ballona-compressed"/65.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">66 / 67</div> <img src="pics-ballona-compressed"/66.jpg" style="width:100%"> </div>
-<div class="mySlides fade"> <div class="numbertext">67 / 67</div> <img src="pics-ballona-compressed"/67.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">1 / 67</div> <img src="pics-ballona-compressed/01.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">2 / 67</div> <img src="pics-ballona-compressed/02.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">3 / 67</div> <img src="pics-ballona-compressed/03.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">4 / 67</div> <img src="pics-ballona-compressed/04.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">5 / 67</div> <img src="pics-ballona-compressed/05.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">6 / 67</div> <img src="pics-ballona-compressed/06.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">7 / 67</div> <img src="pics-ballona-compressed/07.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">8 / 67</div> <img src="pics-ballona-compressed/08.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">9 / 67</div> <img src="pics-ballona-compressed/09.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">10 / 67</div> <img src="pics-ballona-compressed/10.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">11 / 67</div> <img src="pics-ballona-compressed/11.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">12 / 67</div> <img src="pics-ballona-compressed/12.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">13 / 67</div> <img src="pics-ballona-compressed/13.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">14 / 67</div> <img src="pics-ballona-compressed/14.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">15 / 67</div> <img src="pics-ballona-compressed/15.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">16 / 67</div> <img src="pics-ballona-compressed/16.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">17 / 67</div> <img src="pics-ballona-compressed/17.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">18 / 67</div> <img src="pics-ballona-compressed/18.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">19 / 67</div> <img src="pics-ballona-compressed/19.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">20 / 67</div> <img src="pics-ballona-compressed/20.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">21 / 67</div> <img src="pics-ballona-compressed/21.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">22 / 67</div> <img src="pics-ballona-compressed/22.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">23 / 67</div> <img src="pics-ballona-compressed/23.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">24 / 67</div> <img src="pics-ballona-compressed/24.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">25 / 67</div> <img src="pics-ballona-compressed/25.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">26 / 67</div> <img src="pics-ballona-compressed/26.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">27 / 67</div> <img src="pics-ballona-compressed/27.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">28 / 67</div> <img src="pics-ballona-compressed/28.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">29 / 67</div> <img src="pics-ballona-compressed/29.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">30 / 67</div> <img src="pics-ballona-compressed/30.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">31 / 67</div> <img src="pics-ballona-compressed/31.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">32 / 67</div> <img src="pics-ballona-compressed/32.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">33 / 67</div> <img src="pics-ballona-compressed/33.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">34 / 67</div> <img src="pics-ballona-compressed/34.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">35 / 67</div> <img src="pics-ballona-compressed/35.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">36 / 67</div> <img src="pics-ballona-compressed/36.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">37 / 67</div> <img src="pics-ballona-compressed/37.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">38 / 67</div> <img src="pics-ballona-compressed/38.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">39 / 67</div> <img src="pics-ballona-compressed/39.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">40 / 67</div> <img src="pics-ballona-compressed/40.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">41 / 67</div> <img src="pics-ballona-compressed/41.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">42 / 67</div> <img src="pics-ballona-compressed/42.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">43 / 67</div> <img src="pics-ballona-compressed/43.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">44 / 67</div> <img src="pics-ballona-compressed/44.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">45 / 67</div> <img src="pics-ballona-compressed/45.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">46 / 67</div> <img src="pics-ballona-compressed/46.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">47 / 67</div> <img src="pics-ballona-compressed/47.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">48 / 67</div> <img src="pics-ballona-compressed/48.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">49 / 67</div> <img src="pics-ballona-compressed/49.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">50 / 67</div> <img src="pics-ballona-compressed/50.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">51 / 67</div> <img src="pics-ballona-compressed/51.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">52 / 67</div> <img src="pics-ballona-compressed/52.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">53 / 67</div> <img src="pics-ballona-compressed/53.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">54 / 67</div> <img src="pics-ballona-compressed/54.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">55 / 67</div> <img src="pics-ballona-compressed/55.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">56 / 67</div> <img src="pics-ballona-compressed/56.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">57 / 67</div> <img src="pics-ballona-compressed/57.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">58 / 67</div> <img src="pics-ballona-compressed/58.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">59 / 67</div> <img src="pics-ballona-compressed/59.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">60 / 67</div> <img src="pics-ballona-compressed/60.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">61 / 67</div> <img src="pics-ballona-compressed/61.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">62 / 67</div> <img src="pics-ballona-compressed/62.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">63 / 67</div> <img src="pics-ballona-compressed/63.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">64 / 67</div> <img src="pics-ballona-compressed/64.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">65 / 67</div> <img src="pics-ballona-compressed/65.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">66 / 67</div> <img src="pics-ballona-compressed/66.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">67 / 67</div> <img src="pics-ballona-compressed/67.jpg" style="width:100%"> </div>
 
 <a class="prev" onclick="plusSlides(-1)">❮</a>
 <a class="next" onclick="plusSlides(1)">❯</a>
