--- a/art/paintings.html
+++ b/art/paintings.html
@@ -40,7 +40,7 @@ data-full="cat-searching-30x30.jpg">
 <img src="cat-searching-30x30.jpg" alt="Cat Searching Thumbnail">
 <figcaption>
 <strong>Cat Searching</strong><br>
-oil on canvas, 30x30, 2020
+oil on canvas, 30x30in, 2020
 </figcaption>
 </figure>
 
