--- a/newindex.html
+++ b/newindex.html
@@ -39,73 +39,77 @@
 <script>
   // 1) Define your list of status strings
   const statuses = [
- "is not a nark",
- "does whatever he wants",
- "talks in maths",
- "never finishes",
- "splits his time between indoors and outdoors",
- "can't quite remember",
- "is literally inside of a building right now",
- "wears band shirts",
- "inhabits a reality",
- "was once in an elevator with a celebrity",
- "plays the monkey jump",
- "usually opens with f3",
- "has that dream where you're late for the test",
- "sees patterns where there literally aren't any",
- "needs a haircut",
- "should apply himself",
- "laughs at his own jokes",
- "wants to see you",
- "missed a belt loop",
- "impresses your mother",
- "gray at seventeen",
- "no sugar, please",
- "back to the lecture at hand",
- "once put two spaces after a period",
- "might or might not",
- "is unsupervised",
- "never anticipates the jump scare",
- "are we still on the payroll?",
- "anybody seen the cat?",
- "is on the verge",
- "stands corrected",
- "better than expected",
- "wait, what?",
- "gets pulled over",
- "has half a brain",
- "no time to explain",
- "is thinking of a number",
-  "let's do shots",
-  "veni, vidi",
-  "voted for the other one",
-  "drives you forcibly to happiness",
-  "can't quite seem to reach it",
-  "gets stuck now and then",
-  "hates to judge",
-  "gets the news on sunday",
-  "minimal drama",
-  "needs a new backpack",
-  "serves the people",
-  "what, me worry",
-  "what day is it again",
-  "does math in pen",
-  "rat compatible",
-  "thinks you're cool",
-  "has a favorite jacket",
-  "let's don't and say we did",
-  "can imagine quite a bit",
-		  "is off by one",
-		  "what could go wrong",
-  "nice place you have here, mr. pike",
-  "here comes your man",
-  "has no problem with that",
-  "has a double tooth",
-  "needs something to write on",
-  "is laser-focused on delight",
+"is not a nark",
+"does whatever he wants",
+"talks in maths",
+"never finishes",
+"splits his time between indoors and outdoors",
+"can't quite remember",
+"is literally inside of a building right now",
+"wears band shirts",
+"inhabits a reality",
+"was once in an elevator with a celebrity",
+"plays the monkey jump",
+"usually opens with f3",
+"has that dream where you're late for the test",
+"sees patterns where there literally aren't any",
+"needs a haircut",
+"should apply himself",
+"laughs at his own jokes",
+"wants to see you",
+"missed a belt loop",
+"impresses your mother",
+"gray at seventeen",
+"no sugar, please",
+"back to the lecture at hand",
+"once put two spaces after a period",
+"might or might not",
+"is unsupervised",
+"never anticipates the jump scare",
+"are we still on the payroll?",
+"anybody seen the cat?",
+"is on the verge",
+"stands corrected",
+"better than expected",
+"wait, what?",
+"gets pulled over",
+"has half a brain",
+"no time to explain",
+"is thinking of a number",
+"let's do shots", "veni, vidi",
+"voted for the other one",
+"drives you forcibly to happiness",
+"can't quite seem to reach it",
+"gets stuck now and then",
+"hates to judge",
+"gets the news on sunday",
+"minimal drama",
+"needs a new backpack",
+"serves the people",
+"what, me worry",
+"what day is it again",
+"does math in pen",
+"rat compatible",
+"thinks you're cool",
+"has a favorite jacket",
+"let's don't and say we did",
+"can imagine quite a bit",
+"is off by one",
+"what could go wrong",
+"for you? anything",
+"is getting warmer",
+"just touched down in LA",
+"prefers the aisle",
+"will be down by the pool",
+"nice place you have here, mr. pike",
+"here comes your man",
+"has no problem with that",
+"has a double tooth",
+"needs something to write on",
+"is laser-focused on delight",
 "this looks like a job for me",
 "forgot to pack underwear",
-  "is easily amused" ];
+"is easily amused"];
 
   // 2) Pick one at random
   const pick = statuses[Math.floor(Math.random() * statuses.length)];
