--- a/newindex.html
+++ b/newindex.html
@@ -49,7 +49,7 @@
 "wears band shirts",
 "inhabits a reality",
 "was once in an elevator with a celebrity",
-"plays the monkey jump",
+"try me",
 "usually opens with f3",
 "has that dream where you're late for the test",
 "sees patterns where there literally aren't any",
