--- a/ai/index.html
+++ b/ai/index.html
@@ -43,7 +43,8 @@ Dr. Knight served as President of the Association for Computational Linguistics 
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Kevin Knight</p>
+    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+
   </footer>
 </body>
 </html>
