--- a/ai/talks.html
+++ b/ai/talks.html
@@ -31,7 +31,7 @@
       <a href="" class="article-card">USC Masters Graduation (2025), Los Angeles, CA</>
       <a href="https://www-anlp-jp.translate.goog/nlp2024/?_x_tr_sl=ja&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=sc#invited_lecture" class="article-card">30th Japanese NLP Conference (2024), Kobe, Japan</a>
       <a href="https://www.isi.edu/events/4667/30-years-of-perplexity/" class="article-card">USC/ISI NLP Seminar (2024), Marina del Rey, CA</a>
-      <a href="https://wired.me/technology/heres-what-to-expect-from-saudis-global-ai-summit/" class="article-card">(With Sebastian Thrun) Global AI Summit (2022), Riyadh, Saudi Arabia</a>
+      <a href="https://wired.me/technology/heres-what-to-expect-from-saudis-global-ai-summit/" class="article-card">Global AI Summit (2022), Riyadh, Saudi Arabia</a>
       <a href="https://aclanthology.org/events/naacl-2018/" class="article-card">NAACL HLT (2018), New Orleans, LA</a>
     </div>
 
