--- a/art/paintings.html
+++ b/art/paintings.html
@@ -1305,6 +1305,8 @@ oil on canvas, 60x60, 2020
   </script>
 
   <!-- Footer -->
-  <footer><p>&copy; 2025 Kevin Knight</p></footer>
+  <footer>
+    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+  </footer>
 </body>
 </html>
