--- a/comics/comics-old.html
+++ b/comics/comics-old.html
@@ -24,7 +24,9 @@
 
   </main>
 
-  <footer><p>&copy; 2025 Tofu Buffet</p></footer>
+  <footer>
+    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+  </footer>
 </body>
 </html>
 
