--- a/comics/index.html
+++ b/comics/index.html
@@ -30,7 +30,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Tofu Buffet</p>
+    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
   </footer>
 </body>
 </html>
