--- a/math/articles.html
+++ b/math/articles.html
@@ -35,7 +35,9 @@
     </div>
   </main>
 
-  <footer><p>&copy; 2025 Kevin Knight</p></footer>
+  <footer>
+    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+  </footer>
 </body>
 </html>
 
