--- a/math/book.html
+++ b/math/book.html
@@ -43,7 +43,9 @@
 
   </main>
 
-  <footer><p>&copy; 2025 Kevin Knight</p></footer>
+  <footer>
+    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+  </footer>
 </body>
 </html>
 
