--- a/math/contact.html
+++ b/math/contact.html
@@ -31,7 +31,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Kevin Knight</p>
+    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
   </footer>
 </body>
 </html>
