--- a/writing/books.html
+++ b/writing/books.html
@@ -38,7 +38,7 @@
 
       <a href="books.html" class="thumb">
         <figure>
-          <img src="empire-cover2.jpg" alt="Empire of Liberty">
+          <img src="empire1-28x22.jpg" alt="Empire of Liberty">
           <figcaption>An alternate-history spy novel (2026)</figcaption>
         </figure>
       </a>
