--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@ Leaked Russian <a href="pictures/lrwp2.mp4">war plans</a> ... what could go wron
 Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake">Under the Silver Lake</a> (2019).
 
 <p>
-Co-inventor on a 2019 <a href="https://bit.ly/2kS9nX5">US patent</a> about software that writes patents, written by software that writes patents.
+Co-inventor on a 2019 <a href="https://ppubs.uspto.gov/api/patents/html/10417341?source=USPAT&requestToken=eyJzdWIiOiJiZTJlYWQzMS0zNTM2LTQ4ZTItOThiMy03MzAxYjhhNTZiZGUiLCJ2ZXIiOiJlNTFjNTJjOC0yN2I1LTRkNzQtYmRmZC1iM2I0MTJiNTM4MTQiLCJleHAiOjB9">US patent</a> about software that writes patents, written by software that writes patents.
 
 <p>
-Say <a href="http://www.history.com/shows/the-hunt-for-the-zodiac-killer">what</a>?  Don't let <a href="http://www.history.com/news/this-supercomputer-was-programmed-to-think-like-the-zodiac-killer">him</a> cash you outside.
+Say <a href="https://www.imdb.com/title/tt7784996/?ref_=nm_knf_t_3">what</a>?  Don't let <a href="http://www.history.com/news/this-supercomputer-was-programmed-to-think-like-the-zodiac-killer">him</a> cash you outside.
 
 <p> I put together a long-running 
-<A HREF="http://nlg.isi.edu/nl-seminar/">natural language seminar</a>.
+natural language seminar.
 Here are the <A HREF="extra/seminar-how-to.pdf">guidelines</a>.
 
 <p>
@@ -115,11 +115,13 @@ My <A HREF="pictures2/my-busy-robot.mp4">busy robot</a>.
 <p>
 <A HREF="pictures/chaos.jpg">Master of Chaos</a>? Except I don't wear rouge.
 
-<p>
+<!--
+ <p>
 We built an
  <a href="http://amr.isi.edu">AMR semantics bank</a>.  It's like a treebank, <A HREF="https://en.wikipedia.org/wiki/Lock-up_period">but</A> for
 <A HREF="extra/arresting.pdf">semantics</a>.
-
+-->
+ 
 <p>
 <A HREF="extra/den2.mp4">Thunder</a> 
 and 
