--- a/movies/movies.html
+++ b/movies/movies.html
@@ -58,7 +58,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+    <p>&copy; 2025 <a href="../index.html" class="footer-link">Kevin Knight</a></p>
   </footer>
 </body>
 </html>
