--- a/ai/articles.html
+++ b/ai/articles.html
@@ -326,7 +326,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+    <p>&copy; 2025 <a href="../index.html" class="footer-link">Kevin Knight</a></p>
   </footer>
 </body>
 </html>
