--- a/ai/index.html
+++ b/ai/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="navbar">
       <ul>
-      <li><a href="../newindex.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
+      <li><a href="../index.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
         <li><a href="articles.html">Articles</a></li>
         <li><a href="students.html">Students</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
@@ -43,7 +43,7 @@ Dr. Knight served as President of the Association for Computational Linguistics 
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+    <p>&copy; 2025 <a href="../index.html" class="footer-link">Kevin Knight</a></p>
 
   </footer>
 </body>
