--- a/art/index.html
+++ b/art/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="navbar">
       <ul>
-      <li><a href="../newindex.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
+      <li><a href="../index.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
         <li><a href="paintings.html">Paintings</a></li>
         <li><a href="book.html">Book</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
@@ -31,7 +31,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+    <p>&copy; 2025 <a href="../index.html" class="footer-link">Kevin Knight</a></p>
   </footer>
 </body>
 </html>
