--- a/comics/index.html
+++ b/comics/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="navbar">
       <ul>
-      <li><a href="../newindex.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
+      <li><a href="../index.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
         <li><a href="comics.html">Comics</a></li>
         <li><a href="book.html">Book</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -30,7 +30,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+    <p>&copy; 2025 <a href="../index.html" class="footer-link">Kevin Knight</a></p>
   </footer>
 </body>
 </html>
