--- a/likes/index.html
+++ b/likes/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="navbar">
       <ul>
-        <li><a href="../newindex.html">Back to Homepage</a></li>
+        <li><a href="../index.html">Back to Homepage</a></li>
       </ul>
     </nav>
     <div class="hero">
@@ -305,7 +305,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+    <p>&copy; 2025 <a href="../index.html" class="footer-link">Kevin Knight</a></p>
   </footer>
 </body>
 </html>
