--- a/movies/index.html
+++ b/movies/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="navbar">
       <ul>
-      <li><a href="../newindex.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
+      <li><a href="../index.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
         <li><a href="movies.html">Movies</a></li>
         <li><a href="tv.html">TV</a></li>
         <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>
@@ -32,7 +32,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+    <p>&copy; 2025 <a href="../index.html" class="footer-link">Kevin Knight</a></p>
   </footer>
 </body>
 </html>
