--- a/writing/books.html
+++ b/writing/books.html
@@ -29,7 +29,7 @@
         </figure>
       </a>
 
-      <a href="books.html" class="thumb">
+      <a href="https://www.amazon.com/dp/B0F62Q26R1" class="thumb">
         <figure>
           <img src="tofu-buffet-cover.png" alt="Tofu Buffet">
 	  <figcaption>Comics from my alter ego (2025)</figcaption>
@@ -54,7 +54,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 <a href="../newindex.html" class="footer-link">Kevin Knight</a></p>
+    <p>&copy; 2025 <a href="../index.html" class="footer-link">Kevin Knight</a></p>
   </footer>
 </body>
 </html>
