--- a/movies/articles.html
+++ b/movies/articles.html
@@ -16,11 +16,10 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Selected Articles</h1>
+    <h1 class="page-title">Decipherment Articles</h1>
   </header>
 
   <main>
-	  <center> articles on decipherment </center><br>
     <div class="article-list">
 
 	    <!--
