--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 "talks in maths",
 "never finishes",
 "splits his time between indoors and outdoors",
-"can't quite remember",
 "is literally inside of a building right now",
 "wears band shirts",
 "inhabits a reality",
@@ -105,10 +104,20 @@
 "here comes your man",
 "has no problem with that",
 "has a double tooth",
-"needs something to write on",
+"gimme something to write on",
 "is laser-focused on delight",
 "this looks like a job for me",
 "forgot to pack underwear",
+"wasn't me",
+"was just wondering about that",
+"can't find the scissors",
+"could swear it was right here",
+"left the oven on",
+"tap water's fine",
+"is why we can't have nice things",
+"vote for me",
+"be kind, rewind",
+"can't help but notice",
 "is easily amused"];
 
   // 2) Pick one at random
