--- a/likes/index.html
+++ b/likes/index.html
@@ -30,7 +30,7 @@
 <a href="https://en.wikipedia.org/wiki/Tangerine_(Led_Zeppelin_song)" class="nounderline">Tangerine by Led Zeppelin</a><br><br>
 <a href="https://www.drawright.com/band-horizon" class="nounderline">Drawing on the Right Side of the Brain</a><br><br>
 <a href="https://www.soundtransit.org/" class="nounderline">Seattle Light Rail from SeaTac</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Scarface_(1983_film)" class="nounderline">Scarface</a><br><br>
+<!-- <a href="https://en.wikipedia.org/wiki/Scarface_(1983_film)" class="nounderline">Scarface</a><br><br> -->
 <a href="https://en.wikipedia.org/wiki/Brazil_(1985_film)" class="nounderline">Brazil</a><br><br>
 <a href="https://en.wikipedia.org/wiki/I%27m_Only_Sleeping" class="nounderline">I'm Only Sleeping by The Beatles</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Hermosa_Beach,_California" class="nounderline">Hermosa Beach</a><br><br>
@@ -38,7 +38,6 @@
 <a href="https://en.wikipedia.org/wiki/Blade_Runner" class="nounderline">Blade Runner (1982)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Luch_(watch)" class="nounderline">Soviet wristwatches</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Fleabag" class="nounderline">Fleabag</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Richard_Pipes" class="nounderline">Richard Pipes</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Don_DeLillo" class="nounderline">Don DeLillo</a><br><br>
 <a href="https://www.youtube.com/watch?v=bS5P_LAqiVg" class="nounderline">Kung Fury</a><br><br>
 
@@ -66,7 +65,8 @@
 <a href="https://en.wikipedia.org/wiki/Beyond_Belief_(song)" class="nounderline">Beyond Belief by Elvis Costello</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Play_It_as_It_Lays" class="nounderline">Play it as it Lays</a><br><br>
 <a href="https://www.minibarbyjoseandres.com/" class="nounderline">Barmini</a><br><br>
-
+<a href="https://en.wikipedia.org/wiki/Vietnamese_iced_coffee" class="nounderline">Vietnamese coffee</a><br><br>
+<a href="https://www.quantamagazine.org/" class="nounderline">Quanta magazine</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Dreaming_(Blondie_song)" class="nounderline">Dreaming by Blondie</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Jam%C3%B3n" class="nounderline">Jamon serrano</a><br><br>
 
@@ -90,6 +90,7 @@
 <a href="https://en.wikipedia.org/wiki/In_a_World..." class="nounderline">In a World (movie)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Star_Trek:_The_Original_Series" class="nounderline">Star Trek TOS</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Linda_Ronstadt" class="nounderline">Linda Ronstadt</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Richard_Pipes" class="nounderline">Richard Pipes</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Thelma_%26_Louise" class="nounderline">Thelma & Louise</a><br><br>
 <a href="https://en.wikipedia.org/wiki/John_Lennon" class="nounderline">John Lennon</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Weapon_Shops_of_Isher" class="nounderline">The Weapon Shops of Isher</a><br><br>
