--- a/writing/stories.html
+++ b/writing/stories.html
@@ -25,6 +25,9 @@
       <a href="https://kevincrawfordknight.github.io/extra/westbank.txt" class="article-card">
         Little House on the West Bank &nbsp;•&nbsp; Text 
       </a>
+      <a href="../zeks.txt" class="article-card">
+        The Golden Age of DARPA &nbsp;•&nbsp; Text 
+      </a>
     </div>
   </main>
 
