--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <a href="math/index.html"    aria-label="Math">    <img src="button-math.png"    alt="MATH"></a>
     <!--    <a href="comics/index.html"  aria-label="Comics">  <img src="button-comics.png"  alt="TOFU BUFFET"></a>   -->
     <a href="writing/index.html" aria-label="Writing"> <img src="button-writing.png" alt="WRITING"></a>
-    <a href="movies/index.html"  aria-label="Movies">  <img src="button-movies.png"  alt="MOVIES TV"></a>
+    <a href="movies/index.html"  aria-label="Ciphers">  <img src="button-ciphers.png"  alt="CIPHERS"></a>
     <a href="index-old.html"         aria-label="Classic"> <img src="button-classic.png" alt="CLASSIC HOME PAGE"></a>
   </main>
 
