--- a/movies/contact.html
+++ b/movies/contact.html
@@ -12,10 +12,10 @@
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="articles.html">Articles</a></li>
         <li><a href="movies.html">Movies</a></li>
         <li><a href="tv.html">TV</a></li>
         <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>
-        <li><a href="articles.html">Ciphers</a></li>
       </ul>
     </nav>
     <h1 class="page-title">Contact</h1>
