--- a/movies/movies.html
+++ b/movies/movies.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Movies | Kevin Knight</title>
+  <title>Ciphers | Kevin Knight</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Movies</h1>
+    <h1 class="page-title">Ciphers</h1>
   </header>
 
   <main> 
