--- a/art/paintings.html
+++ b/art/paintings.html
@@ -266,6 +266,13 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Aztecs</strong><br>oil on canvas, 30x40, 2017</figcaption>
 </figure>
 
+<figure class="painting" data-category="available" data-title="Selfie 2"
+        data-medium="oil on canvas" data-size="30x30" data-year="2025"
+        data-full="selfie2-30x30.jpg">
+  <img src="selfie2-30x30.jpg" alt="Selfie 2 Thumbnail">
+  <figcaption><strong>Selfie 2</strong><br>oil on canvas, 30x30, 2025</figcaption>
+</figure>
+
 <!--
 <figure class="painting" data-category="available" data-title="Bad Grammar"
         data-medium="oil on canvas" data-size="30x30" data-year="2013"
