--- a/art/paintings.html
+++ b/art/paintings.html
@@ -189,11 +189,11 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Mute</strong><br>oil on canvas, 30x30, 2021</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Hollywood 0"
+<figure class="painting" data-category="available" data-title="Hollywood"
         data-medium="oil on canvas" data-size="30x30" data-year="2022"
         data-full="hollywood0-30x30.jpg">
-  <img src="hollywood0-30x30.jpg" alt="Hollywood 0 Thumbnail">
-  <figcaption><strong>Hollywood 0</strong><br>oil on canvas, 30x30, 2022</figcaption>
+  <img src="hollywood0-30x30.jpg" alt="Hollywood Thumbnail">
+  <figcaption><strong>Hollywood</strong><br>oil on canvas, 30x30, 2022</figcaption>
 </figure>
 
         <figure class="painting" data-category="available" data-title="Coffee"
@@ -282,11 +282,11 @@ oil on canvas, 60x60, 2020
 </figure>
 -->
 
-<figure class="painting" data-category="available" data-title="Big Brother Is Watching You"
+<figure class="painting" data-category="available" data-title="Big Brother is Watching You"
         data-medium="oil on canvas" data-size="36x24" data-year="2013"
         data-full="big-brother-36x24.jpg">
-  <img src="big-brother-36x24.jpg" alt="Big Brother Is Watching You Thumbnail">
-  <figcaption><strong>Big Brother Is Watching You</strong><br>oil on canvas, 36x24, 2013</figcaption>
+  <img src="big-brother-36x24.jpg" alt="Big Brother is Watching You Thumbnail">
+  <figcaption><strong>Big Brother is Watching You</strong><br>oil on canvas, 36x24, 2013</figcaption>
 </figure>
 
 <figure class="painting" data-category="available" data-title="Bizarre Coincidences Never To Be Repeated"
@@ -338,11 +338,11 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Collatz Conjecture</strong><br>oil on canvas, 60x40, 2020</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Consistency Of Arithmetic"
+<figure class="painting" data-category="available" data-title="Consistency of Arithmetic"
         data-medium="oil on canvas" data-size="48x24" data-year="2022"
         data-full="consistency-of-arithmetic-48x24.jpg">
-  <img src="consistency-of-arithmetic-48x24.jpg" alt="Consistency Of Arithmetic Thumbnail">
-  <figcaption><strong>Consistency Of Arithmetic</strong><br>oil on canvas, 48x24, 2022</figcaption>
+  <img src="consistency-of-arithmetic-48x24.jpg" alt="Consistency of Arithmetic Thumbnail">
+  <figcaption><strong>Consistency of Arithmetic</strong><br>oil on canvas, 48x24, 2022</figcaption>
 </figure>
 
 <!--
@@ -449,11 +449,11 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Energy Drink 2</strong><br>oil on canvas, 36x18, 2014</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Eye In The Sky"
+<figure class="painting" data-category="available" data-title="Eye in the Sky"
         data-medium="oil on canvas" data-size="18x36" data-year="2012"
         data-full="eye-in-the-sky-18x36.jpg">
-  <img src="eye-in-the-sky-18x36.jpg" alt="Eye In The Sky Thumbnail">
-  <figcaption><strong>Eye In The Sky</strong><br>oil on canvas, 18x36, 2012</figcaption>
+  <img src="eye-in-the-sky-18x36.jpg" alt="Eye in the Sky Thumbnail">
+  <figcaption><strong>Eye in the Sky</strong><br>oil on canvas, 18x36, 2012</figcaption>
 </figure>
 
 <!--
@@ -488,11 +488,11 @@ oil on canvas, 60x60, 2020
 </figure>
 -->
 
-<figure class="painting" data-category="available" data-title="Forward With Fast Speed To Build And Defend Usa!"
+<figure class="painting" data-category="available" data-title="Forward With Fast Speed To Build And Defend USA!"
         data-medium="oil on canvas" data-size="30x40" data-year="2018"
         data-full="forward-with-fast-speed-30x40.jpg">
-  <img src="forward-with-fast-speed-30x40.jpg" alt="Forward With Fast Speed To Build And Defend Usa! Thumbnail">
-  <figcaption><strong>Forward With Fast Speed To Build And Defend Usa!</strong><br>oil on canvas, 30x40, 2018</figcaption>
+  <img src="forward-with-fast-speed-30x40.jpg" alt="Forward With Fast Speed To Build And Defend USA! Thumbnail">
+  <figcaption><strong>Forward With Fast Speed To Build And Defend USA!</strong><br>oil on canvas, 30x40, 2018</figcaption>
 </figure>
 
 <figure class="painting" data-category="available" data-title="Haiku Vogler"
@@ -591,18 +591,18 @@ oil on canvas, 60x60, 2020
 -->
 
 
-<figure class="painting" data-category="available" data-title="My Boyfriend Is Stupid!"
+<figure class="painting" data-category="available" data-title="My Boyfriend is Stupid!"
         data-medium="oil on canvas" data-size="30x30" data-year="2014"
         data-full="my-boyfriend-is-stupid-30x30.jpg">
-  <img src="my-boyfriend-is-stupid-30x30.jpg" alt="My Boyfriend Is Stupid! Thumbnail">
-  <figcaption><strong>My Boyfriend Is Stupid!</strong><br>oil on canvas, 30x30, 2014</figcaption>
+  <img src="my-boyfriend-is-stupid-30x30.jpg" alt="My Boyfriend is Stupid! Thumbnail">
+  <figcaption><strong>My Boyfriend is Stupid!</strong><br>oil on canvas, 30x30, 2014</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="My Boyfriend Is Even Stupider Than I Thought!"
+<figure class="painting" data-category="available" data-title="My Boyfriend is Even Stupider Than I Thought!"
         data-medium="oil on canvas" data-size="40x30" data-year="2019"
         data-full="my-boyfriend-is-even-stupider-than-i-thought-40x30.jpg">
-  <img src="my-boyfriend-is-even-stupider-than-i-thought-40x30.jpg" alt="My Boyfriend Is Even Stupider Than I Thought! Thumbnail">
-  <figcaption><strong>My Boyfriend Is Even Stupider Than I Thought!</strong><br>oil on canvas, 40x30, 2019</figcaption>
+  <img src="my-boyfriend-is-even-stupider-than-i-thought-40x30.jpg" alt="My Boyfriend is Even Stupider Than I Thought! Thumbnail">
+  <figcaption><strong>My Boyfriend is Even Stupider Than I Thought!</strong><br>oil on canvas, 40x30, 2019</figcaption>
 </figure>
 
 <figure class="painting" data-category="available" data-title="Nice Background"
@@ -852,18 +852,18 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Warren Weaver</strong><br>oil on canvas, 30x30, 2012</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Warmly Welcome The Success"
+<figure class="painting" data-category="available" data-title="Warmly Welcome the Success of the Explosion of Our First H-Bomb 1952!"
         data-medium="oil on canvas" data-size="40x30" data-year="2018"
         data-full="welcome-success-of-first-bomb-40x30.jpg">
-  <img src="welcome-success-of-first-bomb-40x30.jpg" alt="Warmly Welcome The Success Thumbnail">
-  <figcaption><strong>Warmly Welcome The Success</strong><br>oil on canvas, 40x30, 2018</figcaption>
+  <img src="welcome-success-of-first-bomb-40x30.jpg" alt="Warmly Welcome the Success Thumbnail">
+  <figcaption><strong>Warmly Welcome the Success of the Explosion of Our First H-Bomb 1952!</strong><br>oil on canvas, 40x30, 2018</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Why Is My Boyfriend In Miami?"
+<figure class="painting" data-category="available" data-title="Why is My Boyfriend in Miami?"
         data-medium="oil on canvas" data-size="48x60" data-year="2014"
         data-full="why-is-my-boyfriend-in-miami-48x60.jpg">
-  <img src="why-is-my-boyfriend-in-miami-48x60.jpg" alt="Why Is My Boyfriend In Miami? Thumbnail">
-  <figcaption><strong>Why Is My Boyfriend In Miami?</strong><br>oil on canvas, 48x60, 2014</figcaption>
+  <img src="why-is-my-boyfriend-in-miami-48x60.jpg" alt="Why is My Boyfriend in Miami? Thumbnail">
+  <figcaption><strong>Why is my Boyfriend in Miami?</strong><br>oil on canvas, 48x60, 2014</figcaption>
 </figure>
 
 <figure class="painting" data-category="available" data-title="World Internet Service"
@@ -928,11 +928,11 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Morning Train</strong><br>oil on canvas, 36x36, 2014</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Everything I've Encountered Is Heaven Sent"
+<figure class="painting" data-category="sold" data-title="Everything I've Encountered is Heaven Sent"
         data-medium="oil on canvas" data-size="30x30" data-year="2019"
         data-full="everything-ive-encountered-is-heaven-sent-30x30.jpg">
-  <img src="everything-ive-encountered-is-heaven-sent-30x30.jpg" alt="Everything I've Encountered Is Heaven Sent Thumbnail">
-  <figcaption><strong>Everything I've Encountered Is Heaven Sent</strong><br>oil on canvas, 30x30, 2019</figcaption>
+  <img src="everything-ive-encountered-is-heaven-sent-30x30.jpg" alt="Everything I've Encountered is Heaven Sent Thumbnail">
+  <figcaption><strong>Everything I've Encountered is Heaven Sent</strong><br>oil on canvas, 30x30, 2019</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Lime"
@@ -1165,11 +1165,11 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Big Head Surfer</strong><br>oil on canvas, 40x30, 2019</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Use Social Media, Keep Location Services On"
+<figure class="painting" data-category="sold" data-title="Use Social Media, Keep Location Services On!"
         data-medium="oil on canvas" data-size="30x40" data-year="2014"
         data-full="use-social-media-30x40.jpg">
   <img src="use-social-media-30x40.jpg" alt="Use Social Media, Keep Location Services On Thumbnail">
-  <figcaption><strong>Use Social Media, Keep Location Services On</strong><br>oil on canvas, 30x40, 2014</figcaption>
+  <figcaption><strong>Use Social Media, Keep Location Services On!</strong><br>oil on canvas, 30x40, 2014</figcaption>
 </figure>
 
 <!--
