--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
 "vote for me",
 "be kind, rewind",
 "can't help but notice",
+"already tried turning it off and back on",
+"brought snacks",
+"listens to reason",
+"immediately crumples the receipt",
+"who's a good boy",
+"surf's up",
 "is easily amused"];
 
   // 2) Pick one at random
