--- a/writing/stories.html
+++ b/writing/stories.html
@@ -21,12 +21,13 @@
   <main>
     <div class="article-list">
       <a href="genko-kitsu-knight.pdf" class="article-card">
-        Kitsu Went Missing (in Japanese) &nbsp;•&nbsp; PDF
-      <a href="https://kevincrawfordknight.github.io/extra/westbank.txt" class="article-card">
-        Little House on the West Bank &nbsp;•&nbsp; Text 
+        Kitsu Went Missing (in Japanese) (2025)
       </a>
       <a href="../zeks.txt" class="article-card">
-        The Golden Age of DARPA &nbsp;•&nbsp; Text 
+        The Golden Age of DARPA (2006)
+      </a>
+      <a href="https://kevincrawfordknight.github.io/extra/westbank.txt" class="article-card">
+        Little House on the West Bank (2005)
       </a>
     </div>
   </main>
