--- a/movies/index.html
+++ b/movies/index.html
@@ -15,7 +15,7 @@
         <li><a href="articles.html">Articles</a></li>
         <li><a href="movies.html">Movies</a></li>
         <li><a href="tv.html">TV</a></li>
-        <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>
+	<!--    <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>   -->
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
