--- a/movies/tv.html
+++ b/movies/tv.html
@@ -13,7 +13,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="articles.html">Articles</a></li>
         <li><a href="movies.html">Movies</a></li>
-        <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>
+	<!--    <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>   -->
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
